compiler/weave_syntax/tests/data/syntax/IncompleteNamespace7.error
error: expected '}'
        --> <source>:6:1
         |
       6 | 
         | ^
